modules/015-admission-policy-engine/charts/constraint-templates/templates/security/allow-privilege-escalation.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8allowprivilegeescalation
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: security-policy
  annotations:
    metadata.gatekeeper.sh/title: "Allow Privilege Escalation in Container"
    metadata.gatekeeper.sh/version: 1.0.0
    description: >-
      Controls restricting escalation to root privileges. Corresponds to the
      `allowPrivilegeEscalation` field in a PodSecurityPolicy. For more
      information, see https://kubernetes.io/docs/concepts/security/pod-security-standards/
spec:
  crd:
    spec:
      names:
        kind: D8AllowPrivilegeEscalation
      validation:
        openAPIV3Schema:
          type: object
          description: >-
            Controls restricting escalation to root privileges. Corresponds to the
            `allowPrivilegeEscalation` field in a PodSecurityPolicy. For more
            information, see https://kubernetes.io/docs/concepts/security/pod-security-standards/
          properties:
            allowPrivilegeEscalation:
              description: Allowed value for allowPrivilegeEscalation.
              type: boolean            
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.check_bool" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.exception.spe" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.message" . | nindent 16 }}
            rego: |
              package d8.pod_security_policies

              import data.lib.check_bool.check_container_bool
              import data.lib.common.input_containers
              import data.lib.common.object_labels
              import data.lib.common.object_namespace
              import data.lib.message.violation_message

              violation contains {"msg": msg, "details": object.union(object.remove(result.detail, ["msg", "forbidden", "policy_allows", "spe_allows"]), {"container": c.name})} if {
                not input.review.operation == "DELETE"
                c := input_containers[_]
                result := check_container_bool(
                  c,
                  ["securityContext", "allowPrivilegeEscalation"],
                  "allowPrivilegeEscalation",
                  false,
                  true,
                  ["spec", "securityContext", "allowPrivilegeEscalation", "allowedValue"],
                  object_labels,
                  object_namespace
                )
                not result.allowed
                msg := violation_message("Privilege escalation container is not allowed", sprintf("container: %v", [c.name]), result.detail)
              }
