modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privilege-escalation/constraint_pss_restricted.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowPrivilegeEscalation
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        - key: security.deckhouse.io/pod-policy
          operator: In
          values: 
          - baseline
          - restricted
