modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privilege-escalation/test_samples/constraint_templates/pss_restricted/001-allowed-allowPrivilegeEscalation-false.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-allowPrivilegeEscalation-false
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        allowPrivilegeEscalation: false
