modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privilege-escalation/test_samples/constraint_templates/pss_restricted/002-allowed-multiple-containers-all-false.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-multiple-containers-all-false
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        allowPrivilegeEscalation: false
    - name: redis
      image: redis
      securityContext:
        allowPrivilegeEscalation: false
