modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privilege-escalation/test_samples/constraint_templates/pss_restricted/003-disallowed-allowPrivilegeEscalation-true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-allowPrivilegeEscalation-true
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        allowPrivilegeEscalation: true
