modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privilege-escalation/test_samples/constraint_templates/pss_restricted/004-disallowed-initContainer-allowPrivilegeEscalation-true.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-initContainer-allowPrivilegeEscalation-true
  namespace: testns
spec:
  initContainers:
    - name: init
      image: busybox
      securityContext:
        allowPrivilegeEscalation: true
  containers:
    - name: nginx
      image: nginx
      securityContext:
        allowPrivilegeEscalation: false
