modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privilege-escalation/test_samples/security_policy_exceptions/exceptions/013-allow-privilege-escalation-true-container.yaml
apiVersion: deckhouse.io/v1alpha1
kind: SecurityPolicyException
metadata:
  namespace: testns
  name: allow-privilege-escalation-true-container
spec:
  securityContext:
    allowPrivilegeEscalation:
      allowedValue: true
