modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-privilege-escalation/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allow-privilege-escalation
tests:
- name: pss-restricted
  template: ../../templates/security/allow-privilege-escalation.yaml
  constraint: constraint_pss_restricted.yaml
  cases:
  - name: 001-allowed-allowPrivilegeEscalation-false
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/001-allowed-allowPrivilegeEscalation-false.yaml
    assertions:
    - violations: no
  - name: 006-disallowed-no-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/006-disallowed-no-securityContext.yaml
    assertions:
    - violations: yes
  - name: 002-allowed-multiple-containers-all-false
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/002-allowed-multiple-containers-all-false.yaml
    assertions:
    - violations: no
  - name: 003-disallowed-allowPrivilegeEscalation-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/003-disallowed-allowPrivilegeEscalation-true.yaml
    assertions:
    - violations: yes
  - name: 005-disallowed-multiple-containers-one-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/005-disallowed-multiple-containers-one-true.yaml
    assertions:
    - violations: yes
  - name: 004-disallowed-initContainer-allowPrivilegeEscalation-true
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/004-disallowed-initContainer-allowPrivilegeEscalation-true.yaml
    assertions:
    - violations: yes
- name: pss-restricted-with-exception
  template: ../../templates/security/allow-privilege-escalation.yaml
  constraint: constraint_pss_restricted.yaml
  cases:
  - name: 010-014-allowed-by-exception-allowPrivilegeEscalation-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/010-allow-privilege-escalation-true.yaml
    object: test_samples/security_policy_exceptions/pods/014-allowed-by-exception-allowPrivilegeEscalation-true.yaml
    assertions:
    - violations: no
  - name: 009-013-allowed-by-exception-allowPrivilegeEscalation-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/009-allow-privilege-escalation-false.yaml
    object: test_samples/security_policy_exceptions/pods/013-allowed-by-exception-allowPrivilegeEscalation-false.yaml
    assertions:
    - violations: no
  - name: 010-016-allowed-by-exception-multiple-containers-all-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/010-allow-privilege-escalation-true.yaml
    object: test_samples/security_policy_exceptions/pods/016-allowed-by-exception-multiple-containers-all-true.yaml
    assertions:
    - violations: no
  - name: 010-015-allowed-by-exception-mismatch-but-constraint-allows-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/010-allow-privilege-escalation-true.yaml
    object: test_samples/security_policy_exceptions/pods/015-allowed-by-exception-mismatch-but-constraint-allows-false.yaml
    assertions:
    - violations: no
  - name: 009-018-disallowed-by-exception-allowPrivilegeEscalation-mismatch-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/009-allow-privilege-escalation-false.yaml
    object: test_samples/security_policy_exceptions/pods/018-disallowed-by-exception-allowPrivilegeEscalation-mismatch-false.yaml
    assertions:
    - violations: yes
  - name: 010-017-allowed-by-exception-multiple-containers-one-mismatch-but-constraint-allows-false
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/010-allow-privilege-escalation-true.yaml
    object: test_samples/security_policy_exceptions/pods/017-allowed-by-exception-multiple-containers-one-mismatch-but-constraint-allows-false.yaml
    assertions:
    - violations: no
  - name: 019-disallowed-no-exception-label
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/019-disallowed-no-exception-label.yaml
    assertions:
    - violations: yes
  - name: 013-022-allowed-by-container-specific-exception-allowPrivilegeEscalation-true
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-privilege-escalation-true-container.yaml
    object: test_samples/security_policy_exceptions/pods/022-allowed-by-container-exception-allowPrivilegeEscalation-true.yaml
    assertions:
    - violations: no
  - name: 009-010-013-023-allowed-by-merged-exception-container-overrides-global
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/009-allow-privilege-escalation-false.yaml
    - test_samples/security_policy_exceptions/exceptions/013-allow-privilege-escalation-true-container.yaml
    object: test_samples/security_policy_exceptions/pods/023-allowed-by-merged-exception-container-overrides-global.yaml
    assertions:
    - violations: no
  - name: 011-020-disallowed-by-exception-empty-spec
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/011-empty-spec.yaml
    object: test_samples/security_policy_exceptions/pods/020-disallowed-by-exception-empty-spec.yaml
    assertions:
    - violations: yes
